# ayude

./: .gitignore  Cargo.toml  idk.ron
samples/: physicstest.blend  physicstest.blend1  physicstest.gltf  sample.blend  sample.blend1  sphere.gltf
samples/big_generator/: scene.gltf
samples/homework_09_simple_textures/: scene.gltf
samples/knight/: knight.gltf
samples/principito_y_el_aviador/: scene.gltf
src/: blend.rs  camera.rs  catalog.rs  error.rs  fragment.glsl  gltf.rs  graphics.rs  imgui.rs  import_gltf.rs  lib.rs  main.rs  opengl.rs  physics.rs  render.rs  texture_repository.rs  transform.rs
src/graphics/: error.rs  font.rs  geometry.rs  mesh.rs  mod.rs  shader.rs  texture.rs
src/resources/: fragment.glsl  vertex.glsl
src/shader/: shader.wgsl
