[package]
name = "ayude"
version = "1.0.0"
authors = ["Pablo Tato Ramos <pabtatoramos@gmail.com>"]
edition = "2018"
default-run = "ayude"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
debug = true

[dependencies]
thiserror = "1.0"
glutin = "0"
gl = "0"
glam = "0"
image = { version="0", default-features=false, features=["png", "jpeg"] }
gltf = { version="0.16", default-features=false, features=["utils"] }
base64 = "0.13"
msgbox = "0"
smallvec = { version = "1.6", features = [ "union" ] }