[package]
name = "ayude"
version = "1.0.0"
authors = ["Pablo Tato Ramos <pabtatoramos@gmail.com>"]
edition = "2018"
default-run = "ayude"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
debug = true

[dependencies]
thiserror = "1.0"
winit = { version = "0.25", default-features = false }
wgpu = "0.8"
glam = "0.15"
image = { version = "0", default-features = false, features = ["png", "jpeg"] }
gltf = { version = "0.16", default-features = false, features = ["utils"] }
base64 = "0.13"
msgbox = "0"
smallvec = { version = "1.6", features = [ "union" ] }
rusttype = "0.9"
pollster = "0.2"
bytemuck = { version="1.5", features = [ "derive" ] }