[package]
name = "ayude"
version = "1.0.0"
authors = ["Pablo Tato Ramos <pabtatoramos@gmail.com>"]
edition = "2021"
default-run = "ayude"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
debug = true

[dependencies]
thiserror = "1.0"
winit = { version = "0.26", default-features = false }
wgpu = "0.12"
glam = "0.20"
image = { version = "0.23", default-features = false, features = ["png", "jpeg"] }
gltf = { version = "0.16", default-features = false, features = ["utils", "names"] }
base64 = "0.13"
msgbox = "0"
smallvec = { version = "1.7", features = [ "union" ] }
rusttype = "0.9"
pollster = "0.2"
bytemuck = { version="1.7", features = [ "derive" ] }
once_cell = "1.9"
imgui-sys = "0.8"
env_logger = "0.9"
log = "0.4"